tests/requests/snapshots/can_get_note@notes_request.snap
---
source: tests/requests/notes.rs
expression: "(get_note_request.status_code(), get_note_request.text())"
---
(
    200,
    "{\"created_at\":\"DATEZ\",\"updated_at\":\"DATEZ\",\"id\":ID,\"title\":\"Loco note 3\",\"content\":\"Loco note 3 content\",\"user_id\":3}",
)
