tests/requests/snapshots/can_get_notes@notes_request.snap
---
source: tests/requests/notes.rs
expression: "(notes.status_code(), notes.text())"
---
(
    200,
    "[{\"created_at\":\"DATEZ\",\"updated_at\":\"DATEZ\",\"id\":ID,\"title\":\"Loco note 3\",\"content\":\"Loco note 3 content\",\"user_id\":3},{\"created_at\":\"DATEZ\",\"updated_at\":\"DATEZ\",\"id\":ID,\"title\":\"Loco note 4\",\"content\":\"Loco note 4 content\",\"user_id\":4}]",
)
