tests/requests/snapshots/can_get_shared_notes@notes_request.snap
---
source: tests/requests/notes.rs
expression: "(get_shared_notes_request.status_code(), get_shared_notes_request.text())"
---
(
    200,
    "[{\"created_at\":\"DATEZ\",\"updated_at\":\"DATEZ\",\"id\":ID,\"title\":\"Loco note 4\",\"content\":\"Loco note 4 content\",\"user_id\":4}]",
)
