tests/requests/snapshots/can_share_all_notes@notes_request.snap
---
source: tests/requests/notes.rs
expression: "(share_all_notes_request.status_code(), share_all_notes_request.text())"
---
(
    200,
    "{\"message\":\"All notes have been shared successfully\"}",
)
