tests/requests/snapshots/can_share_note@notes_request.snap
---
source: tests/requests/notes.rs
expression: "(share_note_request.status_code(), share_note_request.text())"
---
(
    200,
    "{\"id\":ID,\"note_id\":3,\"shared_with_user_id\":4}",
)
