tests/requests/snapshots/can_update_shared_note@notes_request.snap
---
source: tests/requests/notes.rs
expression: "(update_note_request.status_code(), update_note_request.text())"
---
(
    200,
    "{\"created_at\":\"DATEZ\",\"updated_at\":\"DATEZ\",\"id\":ID,\"title\":\"Updated Shared Note\",\"content\":\"This note has been updated\",\"user_id\":3}",
)
